--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,21 @@ attrs==19.3.0
 beautifulsoup4==4.8.1
 certifi==2019.11.28
 chardet==3.0.4
+Click==7.0
 fake-useragent==0.1.11
+Flask==1.1.1
 idna==2.8
 idna-ssl==1.1.0
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
 multidict==4.6.1
+pkg-resources==0.0.0
+pyTelegramBotAPI==3.6.7
 requests==2.22.0
+six==1.14.0
 soupsieve==1.9.5
 typing-extensions==3.7.4.1
 urllib3==1.25.7
+Werkzeug==1.0.0
 yarl==1.4.2
