info chat added

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 TELEGRAM_TOKEN=000000000:AAAAAAAAAa
 WEBHOOK_URL=https://example.com
-PORT=5000
+MEDIA_CHAT=-98765432
+
+MEDIA_CHAT_LINK=https://t.me/joinchat/juhygtfr
+BOT_LINK=https://t.me/lokjyuhgtf
